Changes with Apache 1.3.28

  *) If Listen directive is not a port, but just an IP, emit an
     error condition as this case is ambiguous.
     [Rich Bowen, Justin Erenkrantz, Cliff Woolley]

  *) Update timeout algorithm in free_proc_chain. If a subprocess
     did not exit immediately, the thread would sleep for 3 seconds
     before checking the subprocess exit status again. In a very
     common case when the subprocess was an HTTP server CGI script,
     the CGI script actually exited a fraction of a second into the 3
     second sleep, which effectively limited the server to serving one 
     CGI request every 3 seconds across a persistent connection.
     PRs 6961, 8664 [Bill Stoddard]

  *) mod_setenvif: Add SERVER_ADDR special keyword to allow
     envariable setting according to the server IP address
     which received the request.  [Ken Coar]

  *) PORT: Enable SINGLE_LISTEN_UNSERIALIZED_ACCEPT for AIX 4.3.2
     and above.  Update AIX configure logic to allow higher AIX 
     release numbers without having to change Apache.
     [Jeff Trawick]

Changes with Apache 1.3.27

  *) SECURITY: CAN-2002-0840 (cve.mitre.org)
     Prevent a cross-site scripting vulnerability in the default
     error page.  The issue could only be exploited if the directive
     UseCanonicalName is set to Off and a server is being run at
     a domain that allows wildcard DNS.  [Matthew Murphy]

  *) SECURITY CAN-2002-0843 (cve.mitre.org)
     Fix some possible overflows in ab.c that could be exploited by
     a malicious server. Reported by David Wagner. [Jim Jagielski]

  *) Included a patch submitted by Sander van Zoest (#9181) and
     written by Michael Radwin whichs is essentially a work around
     for the adding headers to error responses. As apache does not
     go through the proper chain for non 2xx responses. This patch
     adds an ErrorHeader directive; which is for non 2xx replies the
     direct analog of the existing Header directive. This is usefull